Allow guests to view the application.
They shouldn't be able to create anything.